[gd_scene load_steps=2 format=3 uid="uid://co5f7jiu4nvv1"]

[ext_resource type="Script" path="res://Scripts/victory_screen.gd" id="1_sbd36"]

[node name="VictoryScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sbd36")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/CenterContainer"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="Panel/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Você conseguiu!
Seu score é:"

[node name="Button" type="Button" parent="Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Recomeçar"

[node name="MenuButton" type="Button" parent="Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Voltar ao Menu"

[connection signal="pressed" from="Panel/CenterContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Panel/CenterContainer/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
